# FrameProcX

./: .gitignore  README.md  build.sh  gradle.properties  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/xproc/edgedetectx/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gl_render_x.cpp  jni_help_x.cpp  native-lib.cpp
app/src/main/java/com/xproc/edgedetectx/: CamFeedXActivity.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xproc/edgedetectx/: ExampleUnitTest.java
gradle/: libs.versions.toml
